Fix - Align width width

--- a/style-editor-block.css
+++ b/style-editor-block.css
@@ -16,7 +16,7 @@
 }
 
 .editor-styles-wrapper .wp-block[data-align="wide"] {
-	max-width: 1268px;
+	max-width: 1366px;
 }
 
 .editor-styles-wrapper .wp-block.editor-post-title__block .editor-post-title__input {
